--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" href="/src/assets/logo/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/src/assets/logo/apple-touch-icon.png"/>
+    <link rel="manifest" href="/src/assets/logo/site.webmanifest" />
+    <title>Hojin Chang - Full Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
