Add open sans font and header and nav

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon import -->
     <link rel="icon" href="/src/assets/logo/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/src/assets/logo/apple-touch-icon.png"/>
     <link rel="manifest" href="/src/assets/logo/site.webmanifest" />
+    <!-- Open Sans Google font import -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Hojin Chang - Full Stack Developer</title>
   </head>
   <body>
