Add meta keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Full-Stack Developer, Machine Learning, Deep Learning, Computer Vision, Web Development, Front-End Development, Back-End Development, Programming, API Development, React.js, Node.js, Express.js, JavaScript, TypeScript, Python" />
+    <meta name="author" content="Hojin Chang" />
     <!-- Favicon import -->
     <link rel="icon" href="/src/assets/logo/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/src/assets/logo/apple-touch-icon.png"/>
